Add class CenterOfMassComputation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ SET(${PROJECT_NAME}_HEADERS
   include/hpp/model/object-factory.hh
   include/hpp/model/object-iterator.hh
   include/hpp/model/gripper.hh
+  include/hpp/model/center-of-mass-computation.hh
   )
 
 # Declare dependencies
