--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -2,4 +2,4 @@ INPUT = @CMAKE_BINARY_DIR@/doc \
       @CMAKE_SOURCE_DIR@/include \
       @CMAKE_SOURCE_DIR@/doc \
 
-TAGFILES=@FCL_DOXYGENDOCDIR@/fcl.doxytag=@FCL_DOXYGENDOCDIR@
+TAGFILES=@HPP_FCL_DOXYGENDOCDIR@/hpp-fcl.doxytag=@HPP_FCL_DOXYGENDOCDIR@
