Add a test for operations on rotations.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,8 +33,8 @@ MACRO(HPP_MODEL_TEST NAME)
   ADD_EXECUTABLE(${NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cc)
   ADD_TEST(${NAME} ${RUNTIME_OUTPUT_DIRECTORY}/${NAME})
 
-  PKG_CONFIG_USE_DEPENDENCY(${NAME} jrl-dynamics)
-  PKG_CONFIG_USE_DEPENDENCY(${NAME} hpp-kwsio)
+  PKG_CONFIG_USE_DEPENDENCY(${NAME} eigen3)
+  PKG_CONFIG_USE_DEPENDENCY(${NAME} hpp-fcl)
   PKG_CONFIG_USE_DEPENDENCY(${NAME} hpp-util)
 
   # Link against Boost.
@@ -43,3 +43,4 @@ MACRO(HPP_MODEL_TEST NAME)
     ${PROJECT_NAME})
 ENDMACRO(HPP_MODEL_TEST)
 
+HPP_MODEL_TEST (test-configuration)
