Add convenient function when running hpp in GDB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ SET(${PROJECT_NAME}_HEADERS
   include/hpp/model/object-iterator.hh
   include/hpp/model/gripper.hh
   include/hpp/model/center-of-mass-computation.hh
+  include/hpp/model/debug.hh
   )
 
 # Declare dependencies
