added clone methods for device

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 # Boost and add it to the test suite.
 #
 MACRO(HPP_MODEL_TEST NAME)
-  ADD_EXECUTABLE(${NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cc)
+  ADD_EXECUTABLE(${NAME} ${CMAKE_CURRENT_SOURCE_DIR}/test-tools.hh ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cc)
   ADD_TEST(${NAME} ${RUNTIME_OUTPUT_DIRECTORY}/${NAME})
 
   PKG_CONFIG_USE_DEPENDENCY(${NAME} eigen3)
@@ -43,4 +43,9 @@ MACRO(HPP_MODEL_TEST NAME)
     ${PROJECT_NAME})
 ENDMACRO(HPP_MODEL_TEST)
 
+SET(${PROJECT_NAME}_HEADERS
+  tests/test-tools.hh
+  )
+
 HPP_MODEL_TEST (test-configuration)
+HPP_MODEL_TEST (test-clone)
