--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,4 +37,12 @@ PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-util)
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-fcl)
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} eigen3)
 
+IF (ASSIMP_FOUND)
+  ADD_EXECUTABLE(hpp-check-mesh-file
+    check_mesh_file.cc)
+  PKG_CONFIG_USE_DEPENDENCY(hpp-check-mesh-file assimp)
+  TARGET_LINK_LIBRARIES(hpp-check-mesh-file ${LIBRARY_NAME})
+  INSTALL(TARGETS hpp-check-mesh-file DESTINATION bin)
+ENDIF (ASSIMP_FOUND)
+
 INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
