--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ SEARCH_FOR_BOOST()
 ADD_REQUIRED_DEPENDENCY("eigen3 >= 3.2")
 ADD_REQUIRED_DEPENDENCY("hpp-util >= 0.7")
 ADD_REQUIRED_DEPENDENCY("hpp-fcl >= 0.2.9")
+ADD_OPTIONAL_DEPENDENCY("assimp")
 
 # Compile documentation
 CONFIGURE_FILE(doc/main.hh.in doc/main.hh)
